Version svn

Issues fixed:
#39: blocker queries cause segmentation fault
- updating mappings example in INSTALL
- logging less verbose (one line per query)

Version 0.8.1

A couple of bugs fixed.

Issues fixed:
#35: grossd crashes when starting
#36: synchronization still loses one update message

Version 0.8.0

In short: Important changes from the previous version

* You must configure protocols in config file. This is done via
  'protocol' config file parameter. Either 'protocol = sjsms' or
  'protocol = postfix' or both.
* 'sync_host' and 'peer_host' has been deprecated. Use new
  'sync_listen' and 'sync_peer' options.


The longer list:
- Checks are now done in thread pools, which makes it easier to
  develop new checks, like Sophos blocker or SPF. 
- grossd can log aggregate statistics about query results. Check
  'stat_type' and 'stat_interval' configuration parameters.
- grossd can now serve different query protocols simultaneously.
  This is controlled by the 'protocol' config parameter.
- Preliminary support for Sophos blocker. Not yet production
  quality, needs testing. Check issue #19.
- check also doc/examples/grossd.conf, which make install will
  install as the default config file if there is no existing
  grossd.conf

Issues fixed:
#16: synchronization is confusing to configure
#18: documented and configurable timeouts
#23: Customizable SMTP error messages
#26: connections could come from different IP addresses
#27: configurable greylisting time
#28: Bug in the mapping file example
#29: dnsbl tolerance counters not working on OS X
#31: Get rid of --with-worker configure option
#32: gcc makes grosscheck so dependent on libgcc_s.so.1
#33: Update queue synchronizing


Version 0.7.2

- Configurable log_level and syslog_method.
- Message queue enhancements under the hood
- Status counters for various events implemented
- You can now use host names in the configuration

Issues fixed:
#20: allow host names in configuration