@@ -15,7 +15,7 @@
 # DEFAULT: port = 1111
 
 # 'protocol' activates the server protocols grossd will support
-# Valid protocols are 'sjsms' and 'postfix'
+# Valid protocols are 'sjsms', 'postfix' and 'milter'
 protocol = sjsms
 protocol = postfix
 
@@ -27,8 +27,8 @@ protocol = postfix
 # status: basic statistics set
 # since_startup: basic set since the startup 
 # delay: processing delay statistics
-# DEFAULT: stat_type = status
-# DEFAULT: stat_type = delay
+# EXAMPLE: stat_type = status
+# EXAMPLE: stat_type = delay
 
 # 'stat_interval' is the number of seconds between status log entries
 # DEFAULT: stat_interval = 3600
@@ -101,3 +101,6 @@ dnsbl = xbl.smaphaus.org
 
 # 'blocker_port' is the tcp port of the Sophos blocker service.
 # DEFAULT: blocker_port = 4466
+
+# 'milter_listen' is the socket for milter service.
+# EXAMPLE: milter_listen = inet:1234@localhost
