@@ -7,10 +7,10 @@ lib_LTLIBRARIES = grosscheck.la
 noinst_PROGRAMS = bloom
 
 grossd_SOURCES = sha256.c bloom.c utils.c srvutils.c worker.c bloommgr.c gross.c syncmgr.c conf.c msgqueue.c srvstatus.c thread_pool.c stats.c worker_postfix.c worker_sjsms.c check_blocker.c
-EXTRA_grossd_SOURCES = dnsblc.c
+EXTRA_grossd_SOURCES = dnsblc.c worker_milter.c
 grossd_LDFLAGS = @LDFLAGS@ proto_sjsms.o
-grossd_LDADD = @DNSBLSOURCES@ 
-grossd_DEPENDENCIES = @DNSBLSOURCES@ proto_sjsms.c
+grossd_LDADD = @DNSBLSOURCES@ @MILTERSOURCES@
+grossd_DEPENDENCIES = @DNSBLSOURCES@ @MILTERSOURCES@ proto_sjsms.c
 
 gclient_SOURCES = gclient.c utils.c client_postfix.c client_sjsms.c
 gclient_LDFLAGS = @LDFLAGS@ proto_sjsms.o
